<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".login.ResetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_background"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/bgIV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax"
                app:layout_constraintBottom_toBottomOf="@+id/view_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_reset_password" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:minHeight="?android:attr/actionBarSize"
                android:theme="@style/ToolBarStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_background"
                android:orientation="vertical"
                android:padding="@dimen/dimen_15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_background"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/lbl_reset_free_text"
                    style="@style/TextStyle.HeadersSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dimen_5dp"
                    android:text="Enter your new password below, we're just being extra safe."
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_password_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lbl_reset_free_text"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/colorPrimaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_reset_free_text">

                    <EditText
                        android:id="@+id/edt_new_password"
                        style="@style/TextStyle.DescSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/New_password"
                        android:imeActionId="124"
                        android:imeActionLabel="@string/Log_in"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/confirm_password_wrapper"
                        android:nextFocusForward="@+id/confirm_password_wrapper"
                        android:nextFocusRight="@+id/confirm_password_wrapper"
                        android:singleLine="true"
                        android:textColor="@color/primary_text_color" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/confirm_password_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/new_password_wrapper"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/colorPrimaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.516"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_password_wrapper">

                    <EditText
                        android:id="@+id/edt_confirm_password"
                        style="@style/TextStyle.DescSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:imeActionId="124"
                        android:imeActionLabel="@string/Log_in"
                        android:imeOptions="actionSend"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/btn_send"
                        android:nextFocusForward="@+id/btn_send"
                        android:nextFocusRight="@+id/btn_send"
                        android:singleLine="true"
                        android:textColor="@color/primary_text_color" />
                </android.support.design.widget.TextInputLayout>


            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_primary_action_ripple"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/txt_continue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
